@@ -10,39 +10,42 @@ import us.lsi.graphs.alg.PD.Sp;
 
 public sealed interface GraphTree<V extends VirtualHyperVertex<V, E, A, S>, E extends SimpleHyperEdge<V, E, A>, A, S> 
 	permits Gtb, Gtr {
-
+	
 	public static <V extends VirtualHyperVertex<V, E, A, S>, E extends SimpleHyperEdge<V, E, A>, A, S> 
 		GraphTree<V, E, A, S> tb(V v) {
 		return new Gtb<V, E, A, S>(v);
 	}
 
 	public static <V extends VirtualHyperVertex<V, E, A, S>, E extends SimpleHyperEdge<V, E, A>, A, S> 
-		GraphTree<V, E, A, S> tr(V v,List<GraphTree<V, E, A, S>> targets) {
-		return new Gtr<V, E, A, S>(v, targets);
+			GraphTree<V, E, A, S> tr(V v, A a, List<GraphTree<V, E, A, S>> targets) {
+		return new Gtr<V, E, A, S>(v, a, targets);
 	}
-
+	
 	public static <V extends VirtualHyperVertex<V, E, A, S>, E extends SimpleHyperEdge<V, E, A>, A, S> 
-		GraphTree<V, E, A, S> graphTree(V vertex, Map<V, Sp<A, E>> tree) {
+			GraphTree<V,E,A,S> graphTree(V vertex, Map<V,Sp<A,E>> solutionsTree) {
 		GraphTree<V, E, A, S> r = null;
-		Sp<A, E> sp = tree.get(vertex);
+		Sp<A, E> sp = solutionsTree.get(vertex);
 		if (vertex.isBaseCase()) {
-			r = tb(vertex);
+			r = GraphTree.tb(vertex);
 		} else {
-			r = tr(vertex, sp.edge().targets().stream()
-					.map(vt -> graphTree(vt, tree))
-					.collect(Collectors.toList()));
+			List<GraphTree<V,E,A,S>> targets = sp.edge().targets().stream()
+					.map(vt -> graphTree(vt,solutionsTree))
+					.collect(Collectors.toList());
+			r = GraphTree.tr(vertex, sp.edge().action(), targets);
 		}
 		return r;
 	}
-
+	
 	public default S solution() {
 		return switch (this) {
 		case Gtb<V, E, A, S> tb -> tb.vertex().baseCaseSolution();
-		case Gtr<V, E, A, S> tr -> tr.vertex().solution(
-				tr.targets().stream().map(t -> t.solution()).collect(Collectors.toList()));
+		case Gtr<V, E, A, S> tr -> {
+			List<S> ss = tr.targets().stream().map(t -> t.solution()).toList();
+			yield tr.vertex().solution(tr.action(), ss);
+		}
 		};
 	}
-
+	
 	public default Set<V> vertices() {
 		return switch (this) {
 		case Gtb<V, E, A, S> tb -> Set2.of(tb.vertex());
@@ -53,16 +56,6 @@ public sealed interface GraphTree<V extends VirtualHyperVertex<V, E, A, S>, E ex
 		};
 	}
 	
-	public default String toString2() {
-		return switch (this) {
-        case Gtb<V, E, A, S> tb -> String.format("(%s)", tb.vertex());
-        case Gtr<V, E, A, S> tr -> {
-            String ts = tr.targets().stream()
-                    .map(t -> t.toString())
-                    .collect(Collectors.joining(","));
-            yield String.format("(%s --> %s)", tr.vertex(), ts);
-        }
-        };
-	}
-
 }
+
+
